--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +19,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^9.1.3",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
