--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
     "sonner": "^1.3.1",
+    "styled-components": "^6.1.7",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
