--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
+    "gsap": "^3.12.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "sonner": "^1.3.1",
     "styled-components": "^6.1.7",
@@ -30,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
