--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.4",
     "next": "14.0.4",
