--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.11.0",
     "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-icons": "^1.3.0",
+    "@vercel/analytics": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "flowbite-react": "^0.7.2",
